Fix padding on collapsible containers

--- a/src/react-ui/styles/main.css
+++ b/src/react-ui/styles/main.css
@@ -5516,7 +5516,7 @@ details.lumia-panel[open] .lumia-panel-chevron {
 }
 
 .lumiverse-vp-collapsible-inner {
-    padding: 0 14px 14px 14px;
+    padding: 12px 14px 14px 14px;
 }
 
 /* Info box */
